frontend/src/components/sites/MainSite/styles/MainSite.module.scss
.mainSiteWrapper {
    display: grid;
    grid-template-columns: 20% auto;
    width: 90%;
}

@media (max-width: 1200px) {
    .mainSiteWrapper {
        grid-template-columns: 0% 100%;
    }
}

.siteCenter {
    position: relative;
    display: flex;
    justify-content: center;
}

